<resources>
    <string name="app_name">PitStop Auto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_spares">Spares</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="menu_vehicle">My Vehicle</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_Wallet">Wallet</string>
    <string name="menu_settings">Settings</string>


    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>

    <string name="transactions">Transactions</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="fname_required">Please enter your first name</string>
    <string name="surname_required">Please enter your last name</string>
    <string name="email_required">Please enter an email address</string>
    <string name="phone_number_required">Please provide a phone number</string>
    <string name="password_required">Please provide a password</string>
    <string name="must_match">Your passwords should match</string>
    <string name="username_required">Please enter your username</string>
    <string name="add_car">Add Car</string>
    <string name="add_car_trim">Please prodive a car trim</string>
    <string name="add_vehicle_style">Please provide a car style</string>
    <string name="add_chasis_number">Please provide a chasis number</string>
    <string name="add_millage">Please provide your current millage</string>
    <string name="add_next_service">Please provide next service details</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
</resources>